resources/assets/css/style.css
/* ... */
div.tab-container ul {
    --tblr-nav-tabs-border-width: 0 !important;
}

div.tab-container ul li.nav-item .active {
    background-color: var(--tblr-bg-surface) !important;
    --tblr-nav-tabs-border-width: 0 !important;
}

[data-bs-theme=light] div.tab-container div.tab-content {
    background-color: #fff !important;
}

[data-bs-theme=light] div.tab-container ul li.nav-item .active {
    background-color: #fff !important;
    --tblr-nav-tabs-border-width: 0 !important;
}

[data-bs-theme=dark] .select_and_order_all,
[data-bs-theme=dark] .select_and_order_selected {
    border: 1px solid var(--tblr-primary-border-subtle) !important;
}

[data-bs-theme=dark] .select_and_order_all li,
[data-bs-theme=dark] .select_and_order_selected li {
    background-color: var(--tblr-primary-border-subtle);
    border: none !important;
}

/*repeatable fields*/
[data-bs-theme=dark] .repeatable-element {
    background-color: var(--tblr-primary-border-subtle) !important;
}

/*browse field*/
[data-bs-theme=dark] button.browse {
    background-color: var(--tblr-primary-border-subtle);
    color: var(--tblr-light-text)
}

button.browse,
div.btn-file,
div.array-controls button.btn-light {
    box-shadow: none;
}

/*input file*/
[data-bs-theme=dark] label.backstrap-file-label {
    background-color: var(--tblr-primary-border-subtle) !important;
    border-color: var(--tblr-bg-surface);
}

[data-bs-theme=dark] label.backstrap-file-label::after,
[data-bs-theme=dark] div.btn-file {
    background-color: var(--tblr-gray-500);
    color: var(--tblr-light);
}

[data-bs-theme=dark] div.array-controls button.btn-light {
    background-color: transparent;
    border-color: var(--tblr-primary);
    color: var(--tblr-primary);
}

[data-bs-theme=dark] div.array-controls button.btn-light:hover {
    background-color: var(--tblr-primary);
    color: var(--tblr-light);
}

/*modal overlay*/
div.dtr-modal {
    z-index: 9999 !important;
}

footer {
    padding-top: 20px;
}

/*bulk buttons*/
#bottom_buttons a.btn.btn-sm {
    padding: 5px 10px;
}

[data-bs-theme=dark] #crudTable_wrapper table tbody tr td input[type=editable_text],
[data-bs-theme=dark] #crudTable_wrapper table tbody tr td select {
    color: var(--tblr-light-text);
    border-bottom: 1px dashed var(--tblr-gray-700) !important;
}

[data-bs-theme=dark] #crudTable_wrapper table tbody tr td input[type=editable_text]:focus {
    --bs-table-accent-bg: none !important;
    box-shadow: none !important;
}

a.actions-buttons-column {
    border: none;
    background-color: var(--tblr-gray-200);
    --tblr-btn-active-bg: var(--tblr-gray-600);
}

a.actions-buttons-column:hover {
    background-color: var(--tblr-gray-600);
}

a.actions-buttons-column:hover:after,
a.actions-buttons-column.show:after {
    color: var(--tblr-light);
}

[data-bs-theme=dark] a.actions-buttons-column {
    border: none;
    background-color: var(--tblr-gray-800);
    color: var(--tblr-dark-text);
    --tblr-btn-active-bg: var(--tblr-gray-800);
}

[data-bs-theme=dark] a.actions-buttons-column:hover {
    background-color: var(--tblr-gray-900);
}

[data-bs-theme=dark] a.actions-buttons-column:hover:after,
[data-bs-theme=dark] a.actions-buttons-column.show:after {
    color: var(--tblr-dark-text);
}

body {
    scrollbar-gutter: stable;
}

/*Adjust topbar*/
.topbar-transparent {
    background-color: var(--tblr-gray-100) !important;
}

[data-bs-theme=dark] .topbar-transparent {
    background-color: var(--tblr-navbar-bg) !important;
}

/*Sidebar shortcuts*/
.sidebar-shortcuts :not(:first-child):not(.hide-theme):before {
    content: "|";
    color: var(--tblr-gray-300);
    margin-left: 10px;
    margin-right: 10px;
}

[data-bs-theme=dark] .sidebar-shortcuts :not(:first-child):not(.hide-theme):before {
    color: var(--tblr-gray-600);
}

/*Sidebar fixed or not fixed, that's the question*/
@media (min-width: 992px) {
    .navbar-vertical:not(.navbar-fixed) {
        position: absolute !important;
        overflow-y: scroll;
    }
}

[data-bs-theme=dark] .select2-container--bootstrap .select2-dropdown {
    border-color: var(--tblr-border-color) !important;
}

div.controls {
    top: -5px;
}

div.controls button.delete-element {
    background-color: var(--tblr-danger) !important;
    color: #fff;
    border: none;
    height: 25px !important;
    width: 25px !important;
}

.repeatable-group {
    padding-bottom: 12px;
}
.add-repeatable-element-button {
    margin-top: 5px;
}

form .form-group.required > label:not(:empty):not(.form-check-label)::after {
    color: var(--tblr-danger) !important;
}

label {
    padding-bottom: 5px;
    padding-top: 5px;
}

/*Hide separators in horizontal layouts*/
header .nav-separator {
    display: none;
}

.header-operation h3 {
    font-size: 25px;
    line-height: 27px !important;
}

ol li.ui-sortable-placeholder.placeholder {
    width: 100%;
    height: 35px;
}

div.row div.form-group {
    padding-bottom: 10px;
}

tr.array-row td:has(span.ui-sortable-handle) {
    vertical-align: middle !important;
}

[data-bs-theme=dark] tr.array-row td span.ui-sortable-handle,
[data-bs-theme=dark] tr.array-row td button.removeItem {
    background-color: var(--tblr-gray-600);
    color: var(--tblr-light);
}

